--- a/app/assets/stylesheets/studies.scss
+++ b/app/assets/stylesheets/studies.scss
@@ -3,6 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+
+.widget-modal {
+  width: 100%;
+}
+
 .check-wrapper-builder {
   display: flex;
 
