--- a/app/views/studies/_manager_inactive.html.erb
+++ b/app/views/studies/_manager_inactive.html.erb
@@ -1,18 +1,52 @@
 <div class="modal-header">
    <!-- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button> -->
-   <legend id="myModalLabel">Employee Sign Up Link</legend>
+   <legend id="myModalLabel">Inactive Managers</legend>
  </div>
- <div class="modal-body">
+ <div class="modal-body widget-modal">
 
    <div class="well">
+
 
        <p>
          The following managers are inactive.
        </p>
 
+       <table class="table table-condensed table-hover">
+         <thead>
+           <tr>
+             <th>Id</th>
+             <th>First Name</th>
+             <th>Last Name</th>
+             <th>E-Mail</th>
+             <th>Sign Up Date</th>
+           </tr>
+         </thead>
+
+         <tbody>
+           <% @managers_with_no_entries.each do |man| %>
+           <tr>
+             <td>
+               <%= man.id %>
+             </td>
+             <td>
+               <%= man.first_name %>
+             </td>
+             <td>
+               <%= man.last_name %>
+             </td>
+             <td>
+               <%= man.email %>
+             </td>
+             <td>
+               <%= man.created_at %>
+             </td>
+           </tr>
+           <% end %>
+         </tbody>
+       </table>
+
 
     </div>
-
    </div>
  <div class="modal-footer">
    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
