--- a/app/views/studies/employee_inactive.js.erb
+++ b/app/views/studies/employee_inactive.js.erb
@@ -1,1 +1,1 @@
-$("#modal-window").html("<%= escape_javascript(render 'employee_inactive') %>");
+$("#widget-modal").html("<%= escape_javascript(render 'employee_inactive') %>");
