--- a/app/views/studies/manager_inactive.js.erb
+++ b/app/views/studies/manager_inactive.js.erb
@@ -1,1 +1,1 @@
-$("#modal-window").html("<%= escape_javascript(render 'manager_inactive') %>");
+$("#widget-modal").html("<%= escape_javascript(render 'manager_inactive') %>");
