--- a/app/views/managers/show.html.erb
+++ b/app/views/managers/show.html.erb
@@ -3,11 +3,11 @@
 
     <div class="panel panel-primary">
       <div class="panel-heading">
-          <span class="pull-right clickable" ><i class="glyphicon glyphicon-chevron-up"></i></span>
+          <span class="pull-right clickable panel-collapsed" ><i class="glyphicon glyphicon-chevron-down"></i></span>
         <h3 class="panel-title"> <%= @manager.full_name %></h3>
       </div>
 
-      <div class="panel-body panel-collapse-wrapper" >
+      <div class="panel-body panel-collapse-wrapper" style="display: none;">
         <div class="row">
           <div class="col-sm-4">
             <div class="panel panel-default">
