--- a/app/views/studies/_employee_inactive.html.erb
+++ b/app/views/studies/_employee_inactive.html.erb
@@ -32,7 +32,7 @@
                <%= emp.last_name %>
              </td>
              <td>
-               <%= emp.email %>
+               <%= mail_to emp.email %>
              </td>
              <td>
                <%= emp.created_at %>
