--- a/app/views/studies/_manager_inactive.html.erb
+++ b/app/views/studies/_manager_inactive.html.erb
@@ -31,7 +31,7 @@
                <%= man.last_name %>
              </td>
              <td>
-               <%= man.email %>
+                <%= mail_to man.email %>
              </td>
              <td>
                <%= man.created_at %>
